overlaping problem fixed

--- a/src/styles/AllSections.module.css
+++ b/src/styles/AllSections.module.css
@@ -19,3 +19,7 @@
 .base::-webkit-scrollbar-thumb {
   background-color: var(--accent-color);
 }
+
+.base::-webkit-scrollbar-track {
+  background-color: var(--secondary-color);
+}
