--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -165,6 +165,7 @@ a:visited {
 a.button {
   background-color: var(--accent-color);
   color: var(--secondary-color);
+  text-align: center;
   text-decoration: none;
 
   font-size: 0.75em;
